--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,10 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
         <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
     </properties>
 
