--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <spring-devtools.version>2.3.4.RELEASE</spring-devtools.version>
         <swagger-annotations.version>1.5.21</swagger-annotations.version>
         <swagger-core.version>2.1.4</swagger-core.version>
+        <gson.version>2.8.5</gson.version>
+        <junit4.version>4.13</junit4.version>
     </properties>
 
     <dependencies>
@@ -83,12 +85,12 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.8.5</version>
+            <version>${gson.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.13</version>
+            <version>${junit4.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
