--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
             <version>${junit4.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <version>1.8</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
