--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
         <swagger-core.version>2.1.4</swagger-core.version>
         <gson.version>2.8.5</gson.version>
         <junit4.version>4.13</junit4.version>
+        <jackson.version>1.9.13</jackson.version>
+        <json.version>20131018</json.version>
     </properties>
 
     <dependencies>
@@ -101,19 +103,19 @@
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
-            <version>1.9.13</version>
+            <version>${jackson.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-mapper-asl</artifactId>
-            <version>1.9.13</version>
+            <version>${jackson.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
-            <version>20131018</version>
+            <version>${json.version}</version>
         </dependency>
     </dependencies>
 
