--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <junit4.version>4.13</junit4.version>
         <jackson.version>1.9.13</jackson.version>
         <json.version>20131018</json.version>
+        <jsoup.version>1.8.2</jsoup.version>
     </properties>
 
     <dependencies>
@@ -116,6 +117,17 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>${jsoup.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.json-lib</groupId>
+            <artifactId>json-lib</artifactId>
+            <version>2.4</version>
+            <classifier>jdk15</classifier>
         </dependency>
     </dependencies>
 
