--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
+    "@ant-design/icons": "latest",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@pact-foundation/pact-node": "^10.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "antd": "4.8.0",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "cors": "^2.8.5",
@@ -24,9 +27,7 @@
     "react-dragger": "^1.3.0",
     "react-scripts": "3.4.3",
     "react-table": "^7.1.0",
-    "startbootstrap-simple-sidebar": "^5.1.2",
-    "antd": "4.8.0",
-    "@ant-design/icons": "latest"
+    "startbootstrap-simple-sidebar": "^5.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
