--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,8 +8,6 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@pact-foundation/pact-node": "^10.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "4.8.0",
     "axios": "^0.20.0",
@@ -32,7 +30,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "./node_modules/.bin/mocha 'src/pact/**/*.pact.js'",
+    "test": "./node_modules/.bin/mocha 'src/pact_old/**/*.pact.js'",
     "eject": "react-scripts eject",
     "test:consumer": "mocha --exit --timeout 30000 src/draft/consumer.pact.spec.js",
     "test:provider": "mocha --exit --timeout 30000 provider.pact.spec.js",
@@ -59,6 +57,8 @@
   },
   "devDependencies": {
     "@pact-foundation/pact": "^10.0.0-beta.21",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
     "chai": "^4.2.0",
     "jest-pact": "^0.8.1",
     "mocha": "^8.1.3",
